maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:2: error: ';' expected but 'def' found.
ide def run(){
    ^